# psp-eval

./: .gitignore  ANNOUNCEMENT.md  CITATION.cff  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
evaluation/: ACCENT.md  build_300_utt_golden.py  fad.py  modal_psp.py  psd.py  psp.py  psp_bootstrap.py  test_psp.py
evaluation/golden_test_sets/: hi_golden_300.json  hindi_smoke.json  ta_golden_300.json  tamil_smoke.json  te_golden_300.json  telugu_smoke.json
huggingface/: dataset_card.md
paper/: .gitignore  OUTLINE.md  README.md  benchmark_results.json  karya_outreach.md  psp.tex  refs.bib
praxy/linguistics/: __init__.py  bups.py
psp_eval/: README.md  __init__.py  pyproject.toml  scorer.py
