[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psp-eval"
version = "0.1.0"
description = "Interpretable per-phonological-dimension accent benchmark for Indic text-to-speech."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Pushpak Teja", email = "pushpak@praxel.ai" },
]
keywords = [
  "text-to-speech", "accent-evaluation", "indic", "retroflex",
  "phoneme-substitution", "wav2vec2", "tts-benchmark",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "numpy<2",
  "scipy>=1.10",
  "soundfile>=0.12",
  "librosa>=0.10",
  "torch>=2.0",
  "torchaudio>=2.0",
  "transformers>=4.40",
  "huggingface_hub>=0.25",
  "indic-transliteration>=2.3.82",
  "pyctcdecode",
]

[project.optional-dependencies]
modal = ["modal>=0.60"]
dev = ["pytest>=7", "ruff>=0.1"]

[project.urls]
Homepage = "https://praxel.ai/psp"
Paper = "https://arxiv.org/abs/TBD"
Source = "https://github.com/praxelhq/praxy-tts"
"Bug Tracker" = "https://github.com/praxelhq/praxy-tts/issues"
Centroids = "https://huggingface.co/datasets/Praxel/psp-native-centroids"

[project.scripts]
psp-score = "psp_eval.scorer:_cli_main"

[tool.setuptools.packages.find]
include = ["psp_eval*"]
